--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "devDependencies": {
     "gulp": "3.8.x",
     "gulp-concat": "^2.2.0",
-    "gulp-rename": "^1.2.0",
     "gulp-uglify": "^0.2.1",
     "gulp-less": "^1.2.3",
     "gulp-minify-html": "^0.1.6",
@@ -14,10 +13,7 @@
     "gulp-minify-css": "^1.1.6",
     "gulp-if": "^1.2.5",
     "gulp-clean": "^0.3.1",
-    "gulp-print": "^1.1.0",
-    "gulp-csslint": "^0.1.5",
-    "gulp-util": "^3.0.5",
-    "gulp-css-validator": "0.0.4"
+    "gulp-print": "^1.1.0"
   },
   "engines": {
     "node": ">=0.8.0"
