--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "gulp-minify-css": "^1.1.6",
     "gulp-if": "^1.2.5",
     "gulp-clean": "^0.3.1",
-    "gulp-print": "^1.1.0"
+    "gulp-print": "^1.1.0",
+    "gulp-sourcemaps": "^1.5.2"
   },
   "engines": {
     "node": ">=0.8.0"
