--- a/bower.json
+++ b/bower.json
@@ -2,11 +2,12 @@
   "name": "ml-google-maps-ng-gh-pages",
   "version": "0.0.1",
   "dependencies": {
-    "angular": "1.2.28",
-    "angular-route": "1.2.28",
-    "font-awesome": "~4.0.0",
-    "bootstrap": "~3.2.0",
-    "angular-bootstrap": "~0.11.0"
+    "angular": "~1.3.16",
+    "angular-bootstrap": "~0.13.0",
+    "angular-google-maps": "~2.1.4",
+    "angular-ui-router": "~0.2.15",
+    "bootstrap": "~3.3.5",
+    "font-awesome": "~4.3.0"
   },
   "devDependencies": {
   }
