Added compile of html

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ml-google-maps-ng-gh-pages",
+  "name": "ml-google-maps-ng.gh-pages",
   "version": "0.0.1",
   "dependencies": {},
   "devDependencies": {
