--- a/bower.json
+++ b/bower.json
@@ -5,10 +5,10 @@
     "angular": "~1.3.16",
     "angular-bootstrap": "~0.13.0",
     "angular-google-maps": "~2.1.4",
+    "angular-highlightjs": "~0.4.1",
     "angular-ui-router": "~0.2.15",
     "bootstrap": "~3.3.5",
     "font-awesome": "~4.3.0"
   },
-  "devDependencies": {
-  }
+  "devDependencies": {}
 }
