--- a/bower.json
+++ b/bower.json
@@ -8,7 +8,8 @@
     "angular-highlightjs": "~0.4.1",
     "angular-ui-router": "~0.2.15",
     "bootstrap": "~3.3.5",
-    "font-awesome": "~4.3.0"
+    "font-awesome": "~4.3.0",
+    "angular-ui-map": "~0.5.0"
   },
   "devDependencies": {}
 }
