--- a/bower.json
+++ b/bower.json
@@ -1,15 +1,28 @@
 {
   "name": "ml-google-maps-ng.gh-pages",
   "version": "0.0.1",
+  "main": [],
   "dependencies": {
     "angular": "~1.3.16",
     "angular-bootstrap": "~0.13.0",
     "angular-google-maps": "~2.1.4",
     "angular-highlightjs": "~0.4.1",
+    "angular-ui-map": "~0.5.0",
     "angular-ui-router": "~0.2.15",
+    "angular-ui-utils": "~0.2.3",
     "bootstrap": "~3.3.5",
     "font-awesome": "~4.3.0",
-    "angular-ui-map": "~0.5.0"
+    "highlightjs": "~8.5.0",
+    "jquery": "~2.1.4",
+    "lodash": "~3.9.3"
   },
-  "devDependencies": {}
+  "devDependencies": {},
+  "overrides": {
+    "bootstrap": {
+      "main": [
+        "dist/css/bootstrap.css",
+        "dist/js/bootstrap.js"
+      ]
+    }
+  }
 }
