--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "gulp-clean": "^0.3.1",
     "gulp-print": "^1.1.0",
     "gulp-sourcemaps": "^1.5.2",
-    "gulp-rename": "^1.2.2"
+    "gulp-rename": "^1.2.2",
+    "wiredep": "2.2.1",
+    "gulp-replace": "^0.5.3"
   },
   "engines": {
     "node": ">=0.8.0"
