--- a/bower.json
+++ b/bower.json
@@ -2,9 +2,14 @@
   "name": "ml-google-maps-ng",
   "version": "0.0.1",
   "description": "AngularJS directives with Google Maps integration for use with MarkLogic REST-api.",
-  "main": "/dist/ml-google-maps-ng.min.js",
+  "main": [
+    "dist/ml-google-maps-ng.js",
+    "dist/ml-google-maps-ng.css"
+  ],
   "dependencies": {
-    "angular": "1.2.14"
+    "angular": "~1.3.16",
+    "angular-ui-map": "~0.5.0",
+    "angular-ui-utils": "~0.2.3"
   },
   "devDependencies": {
     "angular-mocks": "1.2.14"
