--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "gulp-sourcemaps": "^1.5.2",
     "gulp-uglify": "^0.2.1",
     "gulp-useref": "^1.2.0",
-    "wiredep": "2.2.1"
+    "wiredep": "2.2.1",
+    "gulp-webserver": "^0.9.1"
   },
   "engines": {
     "node": ">=0.8.0"
