--- a/bower.json
+++ b/bower.json
@@ -14,17 +14,24 @@
   "devDependencies": {
     "angular-mocks": "1.2.14"
   },
-  "homepage": "https://github.com/grtjn/ml-google-maps-ng",
+  "moduleType": [
+    "globals"
+  ],
   "authors": [
     "grtjn"
   ],
+  "homepage": "http://grtjn.github.io/ml-google-maps-ng/",
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/grtjn/ml-google-maps-ng.git"
+  },
   "keywords": [
     "angular",
     "angularjs",
     "marklogic",
     "google-maps"
   ],
-  "license": "Apache v2",
+  "license": "Apache-2.0",
   "ignore": [
     "**/.*",
     "node_modules",
