Refined bower.json

--- a/bower.json
+++ b/bower.json
@@ -36,8 +36,10 @@
     "**/.*",
     "node_modules",
     "bower_components",
+    ".tmp",
+    "build",
     "test",
-    "tests",
+    "coverage",
     "gulpfile.js",
     "karma.conf.js",
     "package.json"
