--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "license": "Apache v2",
+  "license": "Apache-2.0",
   "directories": {
     "test": "test"
   },
